<resources>
    <string name="app_name">AppCryptoCompare</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Последнее обновление: %s</string>
    <string name="price_label">Цена:</string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="last_market_label">Последняя сделка:</string>
    <string name="fsym">Криптовалюта:</string>
    <string name="tsym">Валюта:</string>
    <string name="last_updated_label">Обновлено:</string>
    <string name="todo">TODO</string>
    <string name="load_cache">Нет подключения к сети</string>
</resources>